@@ -1,9 +1,9 @@
 package com.kyumall.kyumallclient.product.category;
 
-import com.kyumall.kyumallclient.product.category.dto.CategoryDto;
+import com.kyumall.kyumallclient.product.category.dto.HierarchyCategoryDto;
 import com.kyumall.kyumallclient.product.category.dto.SubCategoryDto;
+import com.kyumall.kyumallcommon.product.category.dto.CategoryDto;
 import com.kyumall.kyumallcommon.product.category.dto.CreateCategoryRequest;
-import com.kyumall.kyumallcommon.product.category.Category;
 import com.kyumall.kyumallcommon.product.category.CategoryMapService;
 import com.kyumall.kyumallcommon.product.category.CategoryService;
 import java.util.ArrayList;
@@ -11,21 +11,22 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
 public class CategoryFacade {
   private final CategoryMapService categoryMapService;
-  private final CategoryService categoryService;
 
   /**
    * 전체 카테고리를 계층형 리스트 형태로 조회
    * @return
    */
-  public List<CategoryDto> getAllCategoriesHierarchy() {
-    Map<Long, List<Category>> categoryGroupingByParent = categoryMapService.findCategoryGroupingByParent();
-    return convertToCategoryHierarchy(categoryGroupingByParent);
+  public List<HierarchyCategoryDto> getAllCategoriesHierarchy() {
+    Map<String, List<CategoryDto>> categoryMap = categoryMapService.findCategoryGroupingByParent();
+    return convertToCategoryHierarchy(categoryMap);
   }
 
   /**
@@ -33,12 +34,12 @@ public class CategoryFacade {
    * @return
    */
   public Map<Long, List<SubCategoryDto>> getAllCategoriesMap() {
-    Map<Long, List<Category>> categoryGroupingByParent = categoryMapService.findCategoryGroupingByParent();
-    return categoryGroupingByParent.entrySet().stream()
+    Map<String, List<CategoryDto>> categoryMap = categoryMapService.findCategoryGroupingByParent();
+    return categoryMap.entrySet().stream()
         .collect(Collectors.toMap(
-            Map.Entry::getKey,  // 키는 변경 없이 유지
+            entry -> Long.parseLong(entry.getKey()),  // 키는 변경 없이 유지
             entry -> entry.getValue().stream()
-                .map(category -> SubCategoryDto.from(category, categoryGroupingByParent.containsKey(category.getId())))
+                .map(categoryDto -> SubCategoryDto.from(categoryDto, categoryMap.containsKey(categoryDto.getId())))
                 .collect(Collectors.toList())
         ));
   }
@@ -46,28 +47,30 @@ public class CategoryFacade {
 
   /**
    * 카테고리 Map을 계층형 구조의 List로 변경
-   * @param groupingByParentId
+   * @param groupingByParentIdMap
    * @return
    */
-  private List<CategoryDto> convertToCategoryHierarchy(Map<Long, List<Category>> groupingByParentId) {
-    List<CategoryDto> rootCategories = groupingByParentId.get(0L).stream().map(CategoryDto::from)
-        .toList();
-    addSubCategories(rootCategories, groupingByParentId);
+  private List<HierarchyCategoryDto> convertToCategoryHierarchy(Map<String, List<CategoryDto>> groupingByParentIdMap) {
+    List<HierarchyCategoryDto> rootCategories = groupingByParentIdMap.get("0")  // root 카테고리는 parentId가 0이다.
+        .stream().map(HierarchyCategoryDto::from)
+        .collect(Collectors.toList());
+    addSubCategories(rootCategories, groupingByParentIdMap);
     return rootCategories;
   }
 
   /**
    * 재귀 호출로 카테고리의 서브 카테고리를 계층형으로 추가합니다.
-   * @param categoryDtos
-   * @param groupingByParentId
+   * @param hierarchyCategoryDtos
+   * @param categoryMap
    */
-  private void addSubCategories(List<CategoryDto> categoryDtos, Map<Long, List<Category>> groupingByParentId) {
-    categoryDtos.stream().forEach(
-        categoryDto -> {
-          List<CategoryDto> subCategories = groupingByParentId.getOrDefault(categoryDto.getId(), new ArrayList<>())
-              .stream().map(CategoryDto::from).toList();
-          categoryDto.setSubCategories(subCategories);
-          addSubCategories(subCategories, groupingByParentId);
+  private void addSubCategories(List<HierarchyCategoryDto> hierarchyCategoryDtos, Map<String, List<CategoryDto>> categoryMap) {
+    hierarchyCategoryDtos.stream().forEach(
+        hierarchyCategoryDto -> {
+          List<HierarchyCategoryDto> subCategories = categoryMap.getOrDefault(
+                  hierarchyCategoryDto.getId().toString(), new ArrayList<>())
+              .stream().map(HierarchyCategoryDto::from).toList();
+          hierarchyCategoryDto.setSubCategories(subCategories);
+          addSubCategories(subCategories, categoryMap);
         }
     );
   }
@@ -78,23 +81,14 @@ public class CategoryFacade {
    * @param id
    * @return
    */
-  public List<SubCategoryDto> getOneStepSubCategories(Long id) {
-    Map<Long, List<Category>> categoryGroupingByParent = categoryMapService.findCategoryGroupingByParent();
-    if (!categoryGroupingByParent.containsKey(id)) {
+  public List<SubCategoryDto> getOneStepSubCategories(String id) {
+    Map<String, List<CategoryDto>> categoryMap = categoryMapService.findCategoryGroupingByParent();
+    if (!categoryMap.containsKey(id)) {
       return new ArrayList<>();
     }
-    return categoryGroupingByParent.get(id)
+    return categoryMap.get(id)
         .stream()
-        .map(category -> SubCategoryDto.from(category, categoryGroupingByParent.containsKey(category.getId())))
+        .map(category -> SubCategoryDto.from(category, categoryMap.containsKey(category.getId())))
         .toList();
-  }
-
-  public void evictCategoryCache() {
-    categoryMapService.evictCategoryMapCache();
-  }
-
-  public Long createdCategory(CreateCategoryRequest request) {
-    categoryMapService.evictCategoryMapCache();
-    return categoryService.createCategory(request).getId();
   }
 }
